# GrooveSprings

./: .gitignore  README.md  compose.yaml  pom.xml
docs/dev-env/: MacOS.md
gs-common/: pom.xml
gs-common/src/main/java/dev/nateschieber/groovesprings/enums/: ApiVersion.java  AudioCodec.java  DefaultStrings.java  Genre.java  MediaType.java
gs-common/src/main/java/dev/nateschieber/groovesprings/helpers/: HttpHelper.java
gs-common/src/main/java/dev/nateschieber/groovesprings/rest/: AbstractClient.java  GsDesktopTrackCreateDto.java
gs-common/src/main/java/enums/: ApiVersion.java  Genre.java
gs-desktop-app/: compose.yaml  pom.xml
gs-desktop-app/src/main/java/dev/nateschieber/groovesprings/: GsDesktopApplication.java
gs-desktop-app/src/main/resources/: application.properties
gs-jni/: pom.xml
gs-jni/src/main/java/dev/nateschieber/groovesprings/jni/: CMakeLists.txt  JniMain.java  SfInfo.java  Vst3AudioHostAppPtr.java  dev_nateschieber_groovesprings_jni_JniMain.cpp  dev_nateschieber_groovesprings_jni_JniMain.h  makefile
gs-jni/src/main/java/dev/nateschieber/groovesprings/jni/audio/: audio.cpp  audio.h  audio_data.h  jni_data.h  sf_info_reader.h
gs-jni/src/main/java/dev/nateschieber/groovesprings/jni/audio/effects/: MVerb.h  effects.h  em_verb.h  gs_effect_reverb.cpp  gs_effect_reverb.h  gs_effects.h
gs-jni/src/main/java/dev/nateschieber/groovesprings/jni/audio/effects/vst3/host/: CMakeLists.txt  hostclasses.cpp  hostclasses.hpp
gs-jni/src/main/java/dev/nateschieber/groovesprings/jni/audio/effects/vst3/host/audiohost/: CMakeLists.txt
gs-jni/src/main/java/dev/nateschieber/groovesprings/jni/audio/effects/vst3/host/audiohost/source/: audiohost.cpp  audiohost.h
gs-jni/src/main/java/dev/nateschieber/groovesprings/jni/audio/effects/vst3/host/editorhost/: CMakeLists.txt
gs-jni/src/main/java/dev/nateschieber/groovesprings/jni/audio/effects/vst3/host/editorhost/source/: editorhost.cpp
gs-jni/src/main/java/dev/nateschieber/groovesprings/jni/audio/effects/vst3/host/editorhost/source/platform/mac/: platform.mm  window.mm
gs-music-library-scanner/: pom.xml
gs-music-library-scanner/src/main/java/dev/nateschieber/groovesprings/: GsMusicLibraryScanner.java
gs-music-library-scanner/src/main/java/dev/nateschieber/groovesprings/rest/: LocalTrackCreateDto.java  TrackClient.java
gs-music-library-scanner/src/main/java/dev/nateschieber/groovesprings/workers/: Scanner.java
gs-price-service/: compose.yaml  pom.xml
gs-price-service/src/main/java/dev/nateschieber/groovesprings/: GsPriceServiceApplication.java
gs-price-service/src/main/java/dev/nateschieber/groovesprings/controllers/: PriceController.java
gs-price-service/src/main/java/dev/nateschieber/groovesprings/entities/: Price.java
gs-price-service/src/main/java/dev/nateschieber/groovesprings/enums/: EntityType.java
gs-price-service/src/main/java/dev/nateschieber/groovesprings/repositories/: PriceRepository.java
gs-price-service/src/main/java/dev/nateschieber/groovesprings/services/: PriceService.java
gs-price-service/src/main/resources/: application.properties
gs-track-service/: compose.yaml  pom.xml
gs-track-service/src/main/java/dev/nateschieber/groovesprings/: GsTrackServiceApplication.java
gs-track-service/src/main/java/dev/nateschieber/groovesprings/composite/: AlbumWithTracks.java
gs-track-service/src/main/java/dev/nateschieber/groovesprings/controllers/: AlbumController.java  TrackController.java  (+4 more)
gs-track-service/src/main/resources/: application.properties
gs-track-service/src/test/resources/: application-test.properties
gs_desktop_application/: dependency-reduced-pom.xml  pom.xml
gs_desktop_application/src/main/cpp/: AppState.cpp  AppState.h  CMakeLists.txt  atoms.h  caf-application.conf  main.cpp  main.h
gs_desktop_application/src/main/cpp/actors/: ActorIds.h  AppStateManager.h  Display.h  GsDisplay.h  GsSupervisor.h  Playback.h  Supervisor.h
gs_desktop_application/src/main/cpp/audio/: CMakeLists.txt  audio.cpp  audio.h  audio_data.h  caf_data.h  constants.h
gs_desktop_application/src/main/cpp/audio/effects/vst3/host/audiohost/: CMakeLists.txt
gs_desktop_application/src/main/cpp/audio/effects/vst3/host/audiohost/source/: audiohost.cpp  audiohost.h
gs_desktop_application/src/main/cpp/audio/effects/vst3/host/audiohost/source/media/: audioclient.cpp  audioclient.h
gs_desktop_application/src/main/cpp/audio/effects/vst3/host/editorhost/source/: editorhost.cpp  editorhost.h
gs_desktop_application/src/main/cpp/audio/effects/vst3/host/editorhost/source/platform/mac/: platform.mm  window.mm
gs_desktop_application/src/main/cpp/enums/: PlayState.h  PlayStates.h
gs_desktop_application/src/main/cpp/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  TransportControl.cpp  TransportControl.h
gs_desktop_application/src/main/cpp/messaging/: Envelope.h  EnvelopeQtPtr.h  atoms.h
gs_desktop_application/src/main/cpp/qt/: CMakeLists.txt  display.cpp  display.h
gs_desktop_application/src/main/frontend/angular/: package.json
gs_desktop_application/src/main/frontend/angular/gs_desktop_frontend/: README.md  angular.json  package-lock.json  package.json
gs_desktop_application/src/main/frontend/angular/gs_desktop_frontend/src/: index.html  main.ts  styles.sass
gs_desktop_application/src/main/resources/: README.md
gs_desktop_application/src/main/scala/dev/nateschieber/groovesprings/: DesktopApplication.scala  GsDesktopApplication.scala  README.md  application.conf  package-info.java
gs_desktop_application/src/main/scala/gs_desktop_application/: App.scala
gs_desktop_application/src/test/scala/dev/nateschieber/groovesprings/: DesktopApplicationTest.scala  GsDesktopApplicationTest.scala
gs_desktop_application/src/test/scala/gs_desktop_application/: AppTest.scala
postman/: Album Service.postman_collection.json  Artist Service.postman_collection.json  Track Priced Service.postman_collection.json  Track Service.postman_collection.json  zz_01_CreateRubberSoul.postman_collection.json  zz_02_CreatePetSounds.postman_collection.json  zz_03_CreateHItsOfThe60s.postman_collection.json
(+331 files in other folders)
